--- a/index.html
+++ b/index.html
@@ -28,7 +28,11 @@
     </div>
 
     <div class="bio">
-        <p>What's up? My name is Autif Kamal. I'm a Full Stack Web Developer. I'm a Canadian for life living in Houston, TX.</p>
+        <div class="bio-body">
+            <p>What's up? My name is <strong>Autif Kamal</strong>. I'm a <strong>Full Stack Web Developer</strong>. I'm a Canadian for life living in <strong>Houston, TX</strong>.</p>
+
+            <p>I want to help <strong>YOU</strong> with your <strong>web development projects</strong> but in the meantime, I teach classes for my coding bootcamp, <strong>Thinkful</strong>  and for multiple coding extracurricular programs for kids.</p>
+        </div>
     </div>
 </body>
 
