added toggle to all content divs

--- a/index.html
+++ b/index.html
@@ -5,15 +5,7 @@
     <link rel="stylesheet" type="text/css" href="css/newstyles.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta content='width=device-width; initial-scale=1.0; maximum-scale=1.0; user-scalable=0;' name='viewport' />
-    <link rel="stylesheet" href="css/magnific-popup.css">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/bxslider/4.2.12/jquery.bxslider.css">
-    <link href="https://fonts.googleapis.com/css?family=Roboto+Slab:700|Slabo" rel="stylesheet">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/bxslider/4.2.12/jquery.bxslider.min.js"></script>
-    <script src="js/jquery.magnific-popup.js"></script>
-    <script src="js/sidenav.js"></script>
-    <script src="js/scroll.js"></script>
-    <script src="js/slider.js"></script>
     <title>AK - Full Stack Web Developer</title>
 </head>
 
@@ -21,10 +13,10 @@
 
 <body>
     <div class="menu">
-        <div><a href="">Bio</a></div>
-        <div><a href="">Projects</a></div>
-        <div><a href="">Resume</a></div>
-        <div><a href="">Contact</a></div>
+        <div id="bio-link">Bio</div>
+        <div id="projects-link">Projects</div>
+        <div id="resume-link">Resume</div>
+        <div id="contact-link">Contact</div>
     </div>
 
     <div class="bio">
@@ -34,6 +26,25 @@
             <p>I want to help <strong>YOU</strong> with your <strong>web development projects</strong> but in the meantime, I teach classes for my coding bootcamp, <strong>Thinkful</strong>  and for multiple coding extracurricular programs for kids.</p>
         </div>
     </div>
+
+    <div class="projects">
+        <div class="projects-container">
+            <div><img src=""><h2>Title</h2><p>Desc</p><p>Stack</p></div>
+            <div><img src=""><h2>Title</h2><p>Desc</p><p>Stack</p></div>
+            <div><img src=""><h2>Title</h2><p>Desc</p><p>Stack</p></div>
+            <div><img src=""><h2>Title</h2><p>Desc</p><p>Stack</p></div>
+        </div>
+    </div>
+
+    <div class="resume">
+        <h1>[Link to Resume]</h1>
+    </div>
+
+    <div class="contact">
+        <h1>Contacts Stuff</h1>
+    </div>
+
+    <script type="text/javascript" src="js/script.js"></script>
 </body>
 
 </html>
