added initial project and contact details

--- a/index.html
+++ b/index.html
@@ -29,10 +29,9 @@
 
     <div class="projects">
         <div class="projects-container">
-            <div><img src=""><h2>Title</h2><p>Desc</p><p>Stack</p></div>
-            <div><img src=""><h2>Title</h2><p>Desc</p><p>Stack</p></div>
-            <div><img src=""><h2>Title</h2><p>Desc</p><p>Stack</p></div>
-            <div><img src=""><h2>Title</h2><p>Desc</p><p>Stack</p></div>
+            <div><h2>Street Fighter Quiz</h2><img src="img/sf_quiz_screenshot_thumbsize.png"><p>Test your knowledge about this Street Fighter</p><p>HTML, CSS, JS, jQuery</p></div>
+            <div><h2>Movie Honer</h2><img src="img/movieHoner_thumb.png"><p>Do a very filtered search for movies</p><p>HTML, CSS, JS, jQuery, React, Node</p></div>
+            <div><h2>TV Suggester</h2><img src="img/tvsuggester_thumb.png"><p>Get recommendations and reviews for a show to watch</p><p>HTML, CSS, JS, jQuery</p></div>
         </div>
     </div>
 
@@ -42,6 +41,14 @@
 
     <div class="contact">
         <h1>Contacts Stuff</h1>
+        <div>   
+            <img src="img/autif_profile_resize.jpg">
+        </div>
+        <div class="contact-icons">   
+            <img src="img/linkedin_resize.png" alt="LinkedIn">
+            <img src="img/github_trans.png" alt="Github">
+            <img src="img/mail-icon.png" alt="Email">
+        </div>
     </div>
 
     <script type="text/javascript" src="js/script.js"></script>
