added all project cards and active class

--- a/index.html
+++ b/index.html
@@ -32,6 +32,8 @@
             <div><h2>Street Fighter Quiz</h2><img src="img/sf_quiz_screenshot_thumbsize.png"><p>Test your knowledge about this Street Fighter</p><p>HTML, CSS, JS, jQuery</p></div>
             <div><h2>Movie Honer</h2><img src="img/movieHoner_thumb.png"><p>Do a very filtered search for movies</p><p>HTML, CSS, JS, jQuery, React, Node</p></div>
             <div><h2>TV Suggester</h2><img src="img/tvsuggester_thumb.png"><p>Get recommendations and reviews for a show to watch</p><p>HTML, CSS, JS, jQuery</p></div>
+            <div><h2>Cig Houston Insurance</h2><img src="img/cighouston_thumbsize.png"><p>Local insurance company for all major insurance policies</p><p>HTML, CSS, JS, jQuery, PHP</p></div>
+            <div><h2>Client Magnet</h2><img src="img/client-magnet_thumb.png"><p>New and local marketing firm</p><p>HTML, CSS, JS, jQuery, PHP</p></div>
         </div>
     </div>
 
