portfolio mobile responsive except nav

--- a/index.html
+++ b/index.html
@@ -95,14 +95,20 @@
     </div>
 
     <div class="contact">
-        <h1>Contacts Stuff</h1>
+        <h1>Contact</h1>
         <div>   
             <img src="img/autif_profile_resize.jpg">
         </div>
         <div class="contact-icons">   
-            <img src="img/linkedin_resize.png" alt="LinkedIn">
-            <img src="img/github_trans.png" alt="Github">
-            <img src="img/mail-icon.png" alt="Email">
+            <a href="https://www.linkedin.com/in/autif-kamal-463699135/">
+                <img src="img/linkedin_resize.png" alt="LinkedIn">
+            </a>
+            <a href="https://github.com/kautif">
+                <img src="img/github_trans.png" alt="Github">
+            </a>
+            <a href="mailto:kautif@gmail.com">
+                <img src="img/mail-icon.png" alt="Email">
+            </a>
         </div>
     </div>
 
