removed unused assets

--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
         <h1>Contact</h1>
         <div class="contact-icons">   
             <a href="https://www.linkedin.com/in/autif-kamal-463699135/" target="_blank">
-                <img src="img/linkedin_resize.png" alt="LinkedIn">
+                <img class="linkedin" src="img/linkedin.png" alt="LinkedIn">
             </a>
             <a href="https://github.com/kautif" target="_blank">
                 <img src="img/github_trans.png" alt="Github">
