--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div class="menu">
         <div class="bio-link">Home</div>
         <div class="projects-link">Projects</div>
-        <div class="resume-link"><a href="https://drive.google.com/file/d/1iBz1sgkjAnZS5No50wCL2Cv-8-Zggdsx/view?usp=sharing" target="_blank">View Resume</a></div>
+        <div class="resume-link"><a href="https://drive.google.com/open?id=1eRrhVO2wEhHqcEF5XG8RQ-gm7GTO6uYM" target="_blank">View Resume</a></div>
         <div class="contact-link">Contact</div>
     </div>
 
