removed profile img and changed background img

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div class="menu">
         <div class="bio-link">Home</div>
         <div class="projects-link">Projects</div>
-        <div class="resume-link"><a href="https://drive.google.com/open?id=1eRrhVO2wEhHqcEF5XG8RQ-gm7GTO6uYM" target="_blank">View Resume</a></div>
+        <div class="resume-link"><a href="https://drive.google.com/file/d/1nFkwrIzlmb9DZfmF6leMFKa-vDkCTpbD/view?usp=sharing" target="_blank">View Resume</a></div>
         <div class="contact-link">Contact</div>
     </div>
 
@@ -25,7 +25,7 @@
         <a href="javascript:void(0)" class="closebtn non-nav" onclick="closeNav()">&times;</a>
         <a class="bio-link">Home</a>
         <a class="projects-link">Projects</a>
-        <a class="resume-link"><a href="https://drive.google.com/file/d/1iBz1sgkjAnZS5No50wCL2Cv-8-Zggdsx/view?usp=sharing" target="_blank">View Resume</a>
+        <a class="resume-link"><a href="https://drive.google.com/file/d/1nFkwrIzlmb9DZfmF6leMFKa-vDkCTpbD/view?usp=sharing" target="_blank">View Resume</a>
         <a class="contact-link">Contact</a>
     </nav>
 
@@ -34,11 +34,8 @@
     </span>
 
     <div class="bio">
-        <div class="profile-pic">   
-            <img src="img/autif_trans_final.png">
-        </div>
         <div class="bio-body">
-            <p>What's up? My name is <strong>Autif Kamal</strong>. I'm a <strong>Full Stack Web Developer</strong>. I'm a Canadian for life who lives in <strong>Houston, TX</strong>.</p>
+            <p>I'm a Canadian for life who lives in <strong>Houston, TX</strong>.</p>
 
             <p>I want to help <strong>YOU</strong> with your <strong>web development projects</strong> but in the meantime, I teach classes for my coding bootcamp, <strong>Thinkful</strong>  and for multiple coding extracurricular programs for kids.</p>
         </div>
