updated css and images

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                       <a class="nav-link projects-link" href="#">Web</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link resume-link" href="https://drive.google.com/file/d/1DaJdju_kfdk6Vlr1odVM_OraLxWZIUhb/view?usp=sharing" target="_blank">Resume</a>
+                        <a class="nav-link resume-link" href="https://docs.google.com/document/d/1wCLno8H9xTCexQ3t6CZJjd0Wph1oc4fm0ZPM9h_z5tg/edit?usp=sharing" target="_blank">Resume</a>
                     </li>
 
                     <li class="nav-item">
@@ -60,21 +60,28 @@
     </span>
 
     <div class="bio">
-        <div class="bio-body container-fluid text-secondary">
+        <div class="bio-body container-fluid text-white">
             <div class="bio-body-1">
-                <img src="img/autifkamal_trans.png" alt="Autif Kamal" />
-                <p>My name is <strong>Autif Kamal</strong>, but my alterego is <strong>Cptn Web</strong> which is my freelancer business name. Shout out to my comic and comic based film lovers out there. My coding journey started in August of 2016. I learned HTML, CSS, JavaScript, jQuery, and PHP through a combination of Codecademy, Team Treehouse, freecodecamp, Udemy, YouTube, and Thinkful. I spent 1 year trying to learn on my own, 1 year working with freelance clients, and its in the 3rd year that I pursued Thinkful's Full Stack Web Development program. This was all while working full time as a delivery driver for Door Dash.</p>     
-                <img src="img/cptn_web_rev_crop_trans.png" alt="Captain Web" />
+                <h2 class="bio__title">Web Developer Turned Software Developer</h2>
+                <img class="bio__main-image" src="img/autifkamal_trans.png" alt="Autif Kamal" />
+                <ul class="bio__summary">
+                    <li>March 2023 - April 2023: Completed TrueCoders bootcamp in C# and .NET</li>
+                    <li>September 2019 - March 2023: 4 years of web development experience (engaging interfaces, mobile responsiveness, APIs, Fullstack Development)</li>
+                </ul>
+                <!-- <img src="img/cptn_web_rev_crop_trans.png" alt="Captain Web" /> -->
+            </div>
+            <div>
+                <h1 class="bio__name">Autif Kamal</h1>
             </div>
             <div class="bio-body-2">
-                <img class="icare" src="img/icare_logo_crop_trans.png" alt="iCare Pharmacy" />
-                <p class="bio-para-2">Currently, I work as a Web Developer and Website Manager for Simply NUC and iCare Pharmacy, respectively. In both cases, I provide unique solutions in how users interact with the site and are presented with information. Both sites require regular and frequent usage of HTML, CSS, JavaScript, jQuery, PHP and WordPress.</p>
-                <img class="simplynuc" src="img/simplynuc_logo.png" alt="Simply NUC" />    
+                <!-- <img class="icare" src="img/icare_logo_crop_trans.png" alt="iCare Pharmacy" /> -->
+                <p class="bio-para-2">The technologies I use regularly are HTML, CSS, JavaScript, React, Node, C#, and .NET 
+                </p>
+                <img class="android" src="img/react_icon.png" alt="React" />
             </div>
             <div class="bio-body-3">
-                <img class="android" src="img/android_studio.png" alt="Android Studio" />
-                <p class="bio-para-3">Presently, I'm very interested in Android and in streaming. In my free time, I'm developing mobile apps. Personally, I use mobile apps all the time and I keep coming up with ideas for interesting apps. So, I'm learning Android more in order to manifest those ideas. In terms of streaming, it adds another layer on top of just playing videogames, but also figuring out how to attract an audience. It's like trying to grow a business and I find that challenge interesting.</p>
-                <img class="twitch" src="img/twitch_trans.png" alt="Twitch" />
+                <a href="https://www.twitch.tv/MinisterGold" target="_blank"><img class="twitch" src="img/twitch_trans.png" alt="Twitch" /></a>
+                <p class="bio-para-3">When I'm not coding, I am preparing a reasoning class for kids using 90s cartoons, streaming on Twitch, and working out. If you're curious about the background, I played a lot of Street Fighter growing up and that background is Suzaku Castle which is Ryu's stage.</p>
             </div>
         </div>
     </div>
@@ -84,13 +91,65 @@
             <div class="container-fluid">
                 <div class="row justify-content-center">
                     <div class="col-lg-5 project">
-                            <h2 class="text-secondary">iCare Pharmacy</h2>
+                        <h2 class="text-white">Yu-Gi-Oh Card Search</h2>
+                        <img class="mockup" src="img/mockup_yugioh_card_search.png">
+                        <div class="">
+                            <a href="https://yugiohcardsearch20230426090738.azurewebsites.net/" target="_blank" class="btn-group btn-group-lg" role="group">
+                                <button type="button" class="btn btn-primary">Live</button></a>
+                            <a href="https://github.com/kautif/yugioh_card_search" target="_blank" class="btn-group btn-group-lg" role="group">
+                                <button type="button" class="btn btn-primary">Repo</button></a>
+                        </div>
+                        <p class="text-white">Search for Yugioh cards via YGOProdeck API and get going prices for each card according to eBay. Failed search results will return an error message and prompt another search</p>
+                        <div class="icons">
+                            <img class="project-icon" src="img/html_icon.png">
+                            <img class="project-icon" src="img/css_icon.png">
+                            <img class="project-icon" src="img/csharp_logo.png">
+                            <img class="project-icon" src="img/NET_Core_Logo.svg">
+                        </div>
+                    </div>
+                    <div class="col-lg-5 project">
+                        <h2 class="text-white">SF2 Themed Weighted Game Selector</h2>
+                        <img class="mockup" src="img/sf2_random_select_mockup.png">
+                        <div class="">
+                            <a href="https://sf2-weighted-rando-game-select.netlify.app/" target="_blank" class="btn-group btn-group-lg" role="group">
+                                <button type="button" class="btn btn-primary">Live</button></a>
+                            <a href="https://github.com/kautif/sf2-random-game-select-frontend" target="_blank" class="btn-group btn-group-lg" role="group">
+                                <button type="button" class="btn btn-primary">Repo</button></a>
+                        </div>
+                        <p class="text-white">Create an account, add games to your list via an API, set numbers of votes for each of them. Have a game randomly selected depending on the number of votes each game has</p>
+                        <div class="icons">
+                            <img class="project-icon" src="img/html_icon.png">
+                            <img class="project-icon" src="img/css_icon.png">
+                            <img class="project-icon-js" src="img/js_icon.png">
+                            <img class="project-icon" src="img/react_icon.png">
+                            <img class="project-icon" src="img/node_icon.png">
+                        </div>
+                    </div>
+                    <div class="col-lg-5 project">
+                        <h2 class="text-white">Knucklebones Clone</h2>
+                        <img class="mockup" src="img/knucklebones_mockups.png">
+                        <div class="">
+                            <a href="https://fishybones.netlify.app/" target="_blank" class="btn-group btn-group-lg" role="group">
+                                <button type="button" class="btn btn-primary">Live</button></a>
+                            <a href="https://github.com/kautif/knucklebones" target="_blank" class="btn-group btn-group-lg" role="group">
+                                <button type="button" class="btn btn-primary">Repo</button></a>
+                        </div>
+                        <p class="text-white">A clone of a minigame that I saw in a game called Cult of the Lamb</p>
+                        <div class="icons">
+                            <img class="project-icon" src="img/html_icon.png">
+                            <img class="project-icon" src="img/css_icon.png">
+                            <img class="project-icon-js" src="img/js_icon.png">
+                            <img class="project-icon" src="img/react_icon.png">
+                        </div>
+                    </div>
+                    <!-- <div class="col-lg-5 project">
+                            <h2 class="text-white">iCare Pharmacy</h2>
                             <img class="mockup" src="img/all_sizes_icare_mockup_trans.png">
                             <div class="">
                                 <a href="https://www.icarepharmacy.ca" target="_blank" class="btn-group btn-group-lg" role="group">
                                     <button type="button" class="btn btn-primary">Live</button></a>
                             </div>
-                            <p class="text-secondary">Small Pharmacy located in Edmonton, AB</p>
+                            <p class="text-white">Small Pharmacy located in Edmonton, AB. Ongoing updates to interfaces and blogs as requested.</p>
                             <div class="icons">
                                 <img class="project-icon" src="img/html_icon.png">
                                 <img class="project-icon" src="img/css_icon.png">
@@ -100,78 +159,23 @@
                             </div>
                         </div>
                     <div class="col-lg-5 project">
-                                <h2 class="text-secondary">Simply NUC</h2>
-                                <img class="mockup" src="img/all_sizes_simplynuc_mockup_trans.png">
-                                <div class="">
-                                    <a href="https://www.simplynuc.com" target="_blank" class="btn-group btn-group-lg" role="group">
-                                        <button type="button" class="btn btn-primary">Live</button></a>
-                                </div>
-                                <p class="text-secondary">Growing startup selling mini PCs</p>
-                                <div class="icons">
-                                    <img class="project-icon" src="img/html_icon.png">
-                                    <img class="project-icon" src="img/css_icon.png">
-                                    <img class="project-icon-js" src="img/js_icon.png">
-                                    <img class="project-icon" src="img/jquery_icon.png">
-                                    <img class="project-icon" src="img/php_icon.png">
-                                </div>
-                            </div>
-                            <div class="col-lg-5 project project-3">
-                                <h2 class="text-secondary">Chat Application</h2>
-                                <img class="mockup" src="img/chat_app_mockup.png">
-                                <div class="">
-                                    <a href="https://5f9e2d1fdecc86d730114b37--nervous-turing-30a2cf.netlify.app" target="_blank" class="btn-group btn-group-lg" role="group">
-                                        <button type="button" class="btn btn-primary">Live</button></a>
-                                    <a href="https://github.com/kautif/react-chat-app" target="_blank" class="btn-group btn-group-lg" role="group">
-                                        <button type="button" class="btn btn-primary">Repo</button></a>
-                                </div>
-                                <p class="text-secondary">Chat App with Functional Backend</p>
-                                <div class="icons">
-                                    <img class="project-icon" src="img/html_icon.png">
-                                    <img class="project-icon" src="img/css_icon.png">
-                                    <img class="project-icon-js" src="img/js_icon.png">
-                                    <img class="project-icon" src="img/react_icon.png">
-                                    <img class="project-icon" src="img/node_icon.png">
-                                    <img class="project-icon" src="img/socket-io.svg">
-                                </div>
-                            </div>
-                            <div class="col-lg-5 project">
-                        <h2 class="text-secondary">Movie Honer</h2>
-                        <img class="mockup" src="img/mockup_mh.png">
-                        <div class="">
-                            <a href="https://movie-honer.herokuapp.com/" target="_blank" class="btn-group btn-group-lg" role="group">
-                                <button type="button" class="btn btn-primary">Live</button></a>
-                            <a href="https://github.com/kautif/movieHoner" target="_blank" class="btn-group btn-group-lg" role="group">
-                                <button type="button" class="btn btn-primary">Repo</button></a>
-                        </div>
-                        <p class="text-secondary">Do a very filtered search for movies</p>
-                        <div class="icons">
-                            <img class="project-icon" src="img/html_icon.png">
-                            <img class="project-icon" src="img/css_icon.png">
-                            <img class="project-icon-js" src="img/js_icon.png">
-                            <img class="project-icon" src="img/jquery_icon.png">
-                            <img class="project-icon" src="img/react_icon.png">
-                            <img class="project-icon" src="img/node_icon.png">
-                        </div>
-                    </div>
-                    <div class="col-lg-5 project">
-                            <h2 class="text-secondary">TV Suggester</h2>
-                            <img class="mockup" src="img/mockup_ts.png">
+                            <h2 class="text-white">Simply NUC</h2>
+                            <img class="mockup" src="img/all_sizes_simplynuc_mockup_trans.png">
                             <div class="">
-                                <a href="https://www.kautif.com/tvsuggester" target="_blank" class="btn-group btn-group-lg" role="group">
+                                <a href="https://www.simplynuc.com" target="_blank" class="btn-group btn-group-lg" role="group">
                                     <button type="button" class="btn btn-primary">Live</button></a>
-                                <a href="https://github.com/kautif/tvsuggester" target="_blank" class="btn-group btn-group-lg" role="group">
-                                    <button type="button" class="btn btn-primary">Repo</button></a>
                             </div>
-                            <p class="text-secondary">Get recommendations and reviews for a show to watch</p>
+                            <p class="text-white">Growing startup selling mini PCs. Preparing products in eCommerce store prior to launch, correcting product details, and adding new website functionalities.</p>
                             <div class="icons">
                                 <img class="project-icon" src="img/html_icon.png">
                                 <img class="project-icon" src="img/css_icon.png">
                                 <img class="project-icon-js" src="img/js_icon.png">
                                 <img class="project-icon" src="img/jquery_icon.png">
+                                <img class="project-icon" src="img/php_icon.png">
                             </div>
-                        </div>
+                    </div> -->
                     <div class="col-lg-5 project">
-                        <h2 class="text-secondary">Street Fighter Quiz</h2>
+                        <h2 class="text-white">Street Fighter Quiz</h2>
                         <img class="mockup" src="img/mockup_sf.png">
                         <div class="">
                             <a href="https://www.kautif.com/sf_quiz" target="_blank" class="btn-group btn-group-lg" role="group">
@@ -179,7 +183,7 @@
                             <a href="https://github.com/kautif/sfquiz" target="_blank" class="btn-group btn-group-lg" role="group">
                                 <button type="button" class="btn btn-primary">Repo</button></a>
                         </div>
-                        <p class="text-secondary">Test your knowledge about this Street Fighter</p>
+                        <p class="text-white">Test your knowledge about this Street Fighter</p>
                         <div class="icons">
                             <img class="project-icon" src="img/html_icon.png">
                             <img class="project-icon" src="img/css_icon.png">
@@ -195,7 +199,7 @@
     <div class="resume">
         <h1>Resume</h1>
         <div class="view-resume">
-            <a href="https://drive.google.com/file/d/1iBz1sgkjAnZS5No50wCL2Cv-8-Zggdsx/view?usp=sharing" target="_blank">
+            <a href="https://docs.google.com/document/d/1wCLno8H9xTCexQ3t6CZJjd0Wph1oc4fm0ZPM9h_z5tg/edit?usp=sharing" target="_blank" />
             <h2>Click to View</h2>
         </a>
         </div>
@@ -214,10 +218,12 @@
                 <i class="fas fa-envelope"></i>
             </a>
         </div>
+<div class="elfsight-app-7bbfdac4-4519-4124-8ae5-ad4f43a83ee4"></div>
     </div>
     <script type="text/javascript" src="js/hammenu.js"></script>
     <script type="text/javascript" src="js/sidenav.js"></script>
     <script type="text/javascript" src="js/script.js"></script>
+    <script src="https://apps.elfsight.com/p/platform.js" defer></script>
 </body>
 
 </html>
