added games section and updated corresponding styles

--- a/index.html
+++ b/index.html
@@ -21,25 +21,28 @@
 <html lang="en">
 
 <body>
-        <div class="card text-center">
-                <div class="card-header">
-                  <ul class="nav nav-pills card-header-pills justify-content-around">
-                    <li class="nav-item">
-                      <a class="nav-link active bio-link" href="#">Home</a>
-                    </li>
-                    <li class="nav-item">
-                      <a class="nav-link projects-link" href="#">Web</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link resume-link" href="https://docs.google.com/document/d/1wCLno8H9xTCexQ3t6CZJjd0Wph1oc4fm0ZPM9h_z5tg/edit?usp=sharing" target="_blank">Resume</a>
-                    </li>
+    <div class="card text-center">
+        <div class="card-header">
+            <ul class="nav nav-pills card-header-pills justify-content-around">
+                <li class="nav-item">
+                    <a class="nav-link active bio-link" href="#">Home</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link projects-link" href="#">Web</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link games-link" href="#">Games</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link resume-link" href="https://docs.google.com/document/d/1wCLno8H9xTCexQ3t6CZJjd0Wph1oc4fm0ZPM9h_z5tg/edit?usp=sharing" target="_blank">Resume</a>
+                </li>
 
-                    <li class="nav-item">
-                        <a class="nav-link contact-link" href="#">Contact</a>
-                    </li>
-                  </ul>
-                </div>
-              </div>
+                <li class="nav-item">
+                    <a class="nav-link contact-link" href="#">Contact</a>
+                </li>
+            </ul>
+        </div>
+    </div>
     <!-- <div class="menu">
         <div class="">Home</div>
         <div class="projects-link">Projects</div>
@@ -51,8 +54,10 @@
         <a href="javascript:void(0)" class="closebtn non-nav" onclick="closeNav()">&times;</a>
         <a class="bio-link text-primary" onclick="closeNav()">Home</a>
         <a class="projects-link text-primary" onclick="closeNav()">Projects</a>
-        <a class="resume-link text-primary" onclick="closeNav()"><a href="https://drive.google.com/file/d/1nFkwrIzlmb9DZfmF6leMFKa-vDkCTpbD/view?usp=sharing" target="_blank">View Resume</a>
-        <a class="contact-link text-primary" onclick="closeNav()">Contact</a>
+        <a class="games-link text-primary" onclick="closeNav()">Games</a>
+        <a class="resume-link text-primary" onclick="closeNav()">
+            <a href="https://drive.google.com/file/d/1nFkwrIzlmb9DZfmF6leMFKa-vDkCTpbD/view?usp=sharing" target="_blank">View Resume</a>
+            <a class="contact-link text-primary" onclick="closeNav()">Contact</a>
     </nav>
 
     <span class="hamburger-menu" onclick="openNav()">
@@ -75,7 +80,8 @@
             </div>
             <div class="bio-body-2">
                 <!-- <img class="icare" src="img/icare_logo_crop_trans.png" alt="iCare Pharmacy" /> -->
-                <p class="bio-para-2">The technologies I use regularly are HTML, CSS, JavaScript, React, Node, C#, and .NET 
+                <p class="bio-para-2">
+                    The technologies I use regularly are HTML, CSS, JavaScript, React, Node, C#, and .NET
                 </p>
                 <img class="android" src="img/react_icon.png" alt="React" />
             </div>
@@ -95,9 +101,11 @@
                         <img class="mockup" src="img/mockup_yugioh_card_search.png">
                         <div class="">
                             <a href="https://yugiohcardsearch20230426090738.azurewebsites.net/" target="_blank" class="btn-group btn-group-lg" role="group">
-                                <button type="button" class="btn btn-primary">Live</button></a>
+                                <button type="button" class="btn btn-primary">Live</button>
+                            </a>
                             <a href="https://github.com/kautif/yugioh_card_search" target="_blank" class="btn-group btn-group-lg" role="group">
-                                <button type="button" class="btn btn-primary">Repo</button></a>
+                                <button type="button" class="btn btn-primary">Repo</button>
+                            </a>
                         </div>
                         <p class="text-white">Search for Yugioh cards via YGOProdeck API and get going prices for each card according to eBay. Failed search results will return an error message and prompt another search</p>
                         <div class="icons">
@@ -112,9 +120,11 @@
                         <img class="mockup" src="img/sf2_random_select_mockup.png">
                         <div class="">
                             <a href="https://sf2-weighted-rando-game-select.netlify.app/" target="_blank" class="btn-group btn-group-lg" role="group">
-                                <button type="button" class="btn btn-primary">Live</button></a>
+                                <button type="button" class="btn btn-primary">Live</button>
+                            </a>
                             <a href="https://github.com/kautif/sf2-random-game-select-frontend" target="_blank" class="btn-group btn-group-lg" role="group">
-                                <button type="button" class="btn btn-primary">Repo</button></a>
+                                <button type="button" class="btn btn-primary">Repo</button>
+                            </a>
                         </div>
                         <p class="text-white">Create an account, add games to your list via an API, set numbers of votes for each of them. Have a game randomly selected depending on the number of votes each game has</p>
                         <div class="icons">
@@ -130,9 +140,11 @@
                         <img class="mockup" src="img/knucklebones_mockups.png">
                         <div class="">
                             <a href="https://fishybones.netlify.app/" target="_blank" class="btn-group btn-group-lg" role="group">
-                                <button type="button" class="btn btn-primary">Live</button></a>
+                                <button type="button" class="btn btn-primary">Live</button>
+                            </a>
                             <a href="https://github.com/kautif/knucklebones" target="_blank" class="btn-group btn-group-lg" role="group">
-                                <button type="button" class="btn btn-primary">Repo</button></a>
+                                <button type="button" class="btn btn-primary">Repo</button>
+                            </a>
                         </div>
                         <p class="text-white">A clone of a minigame that I saw in a game called Cult of the Lamb</p>
                         <div class="icons">
@@ -179,9 +191,11 @@
                         <img class="mockup" src="img/mockup_sf.png">
                         <div class="">
                             <a href="https://www.kautif.com/sf_quiz" target="_blank" class="btn-group btn-group-lg" role="group">
-                                <button type="button" class="btn btn-primary">Live</button></a>
+                                <button type="button" class="btn btn-primary">Live</button>
+                            </a>
                             <a href="https://github.com/kautif/sfquiz" target="_blank" class="btn-group btn-group-lg" role="group">
-                                <button type="button" class="btn btn-primary">Repo</button></a>
+                                <button type="button" class="btn btn-primary">Repo</button>
+                            </a>
                         </div>
                         <p class="text-white">Test your knowledge about this Street Fighter</p>
                         <div class="icons">
@@ -196,18 +210,61 @@
         </div>
     </div>
 
+    <div class="games">
+        <div class="games-container">
+            <div class="container-fluid">
+                <div class="row justify-content-center">
+                    <div class="col-lg-5 game">
+                        <h2 class="text-white">Knucklebones Clone</h2>
+                        <img class="mockup" src="img/knucklebones_mockups.png">
+                        <div class="">
+                            <a href="https://fishybones.netlify.app/" target="_blank" class="btn-group btn-group-lg" role="group">
+                                <button type="button" class="btn btn-primary">Live</button>
+                            </a>
+                            <a href="https://github.com/kautif/knucklebones" target="_blank" class="btn-group btn-group-lg" role="group">
+                                <button type="button" class="btn btn-primary">Repo</button>
+                            </a>
+                        </div>
+                        <p class="text-white">A clone of a minigame that I saw in a game called Cult of the Lamb</p>
+                        <div class="icons">
+                            <img class="project-icon" src="img/html_icon.png">
+                            <img class="project-icon" src="img/css_icon.png">
+                            <img class="project-icon-js" src="img/js_icon.png">
+                            <img class="project-icon" src="img/react_icon.png">
+                        </div>
+                    </div>
+                    <div class="col-lg-5 game">
+                        <h2 class="text-white">Pong</h2>
+                        <img class="mockup" src="img/pong_gameplay.png">
+                        <div class="">
+                            <a href="https://ministergold.itch.io/pong" target="_blank" class="btn-group btn-group-lg" role="group">
+                                <button type="button" class="btn btn-primary">Live</button>
+                            </a>
+                        </div>
+                        <p class="text-white">A clone of Pong. I followed a Zenva tutorial to make the core functionality. It lacked a start screen, win condition, pause feature, game over screen, retry and quit buttons, so I added those things</p>
+                        <div class="icons">
+                            <img class="project-icon" src="img/csharp_logo.png">
+                            <img class="project-icon" src="img/unity_icon.png">
+                            <img class="project-icon" src="img/webgl_icon.png">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
     <div class="resume">
         <h1>Resume</h1>
         <div class="view-resume">
             <a href="https://docs.google.com/document/d/1wCLno8H9xTCexQ3t6CZJjd0Wph1oc4fm0ZPM9h_z5tg/edit?usp=sharing" target="_blank" />
             <h2>Click to View</h2>
-        </a>
+            </a>
         </div>
     </div>
 
     <div class="contact">
         <h1>Contact</h1>
-        <div class="contact-icons">   
+        <div class="contact-icons">
             <a href="https://www.linkedin.com/in/autif-kamal-463699135/" target="_blank">
                 <i class="fab fa-linkedin"></i>
             </a>
@@ -218,7 +275,7 @@
                 <i class="fas fa-envelope"></i>
             </a>
         </div>
-<div class="elfsight-app-7bbfdac4-4519-4124-8ae5-ad4f43a83ee4"></div>
+        <div class="elfsight-app-7bbfdac4-4519-4124-8ae5-ad4f43a83ee4"></div>
     </div>
     <script type="text/javascript" src="js/hammenu.js"></script>
     <script type="text/javascript" src="js/sidenav.js"></script>
